home added on navbar, interior changed to leather

--- a/locales/de/common.json
+++ b/locales/de/common.json
@@ -12,8 +12,9 @@
   "email_alert_error": "Etwas ist schief gelaufen. Bitte versuche es erneut.",
   "email_form_title": "Kontaktieren Sie uns für weitere Informationen",
   "message_type":"Geben Sie eine Nachricht ein...",
+  "homepage":"Home",
   "cars_for_sale":"Autos zu verkaufen",
-  "interior_navbar":"Innenraum",
+  "leather_navbar":"Leder",
   "chrome_parts":"Chromteile",
   "body_restoration":"Wiederherstellung des Körpers",
   "contact":"Kontakt",
