--- a/locales/de/index.json
+++ b/locales/de/index.json
@@ -1,14 +1,13 @@
 {
   "AtelierDS": "AtelierDS",
-  "welcome_text": "Willkommen bei AtelierDS. Wir sind Citroen DS-Enthusiasten, die Ihren DS so aussehen lassen, als käme er gerade aus der Fabrik. Neben Detaillierung und Restaurierung bieten wir fertige Citroen DS Fahrzeuge zum Kauf an.",
-  "interior_text": "Wir bieten komplette Innenrestaurierung in Top-Qualität.",
-  "": "",
+  "welcome_text": "Willkommen bei AtelierDS! Wir sind Citroen DS-Enthusiasten, die Ihren DS so aussehen lassen, als käme er gerade aus der Fabrik. Neben Detaillierung und Restaurierung bieten wir fertige Citroen DS Fahrzeuge zum Kauf an.",
+  "leather_text": "Wir bieten komplette Innenrestaurierung in Top-Qualität.",
   "check_our_cars": "Überprüfen Sie unsere Autos",
   "body_restauration": "Wiederherstellung des Körpers",
   "body_restauration_text": "Um das Ganze abzurunden, bieten wir eine komplette Karosserierestaurierung in Kroatien an.",
   "chrome_parts": "Chromteile",
   "chrome_parts_text": "Wenn Ihr Chrom nicht mehr so schön und glänzend aussieht wie früher ... nun, wir bringen es wieder in seinen ursprünglichen glänzenden Zustand!",
-  "interior": "Innenraum",
+  "leather": "Leder",
   "see_more": "Sehen Sie mehr",
   "quality_service": "Qualitätsservice rundum",
   "quality_service_text": "Atelierds bietet qualitativ hochwertigen Service in allen Aspekten der Autorestaurierung. Mit unseren Partnern in Kroatien für die Karosserierestaurierung bieten wir die komplette Restaurierung des Citroen DS an.",
