--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -12,8 +12,9 @@
   "email_alert_error": "Something went wrong. Please try again.",
   "email_form_title": "Contact us for further information",
   "message_type":"Type a message...",
+  "homepage":"Home",
   "cars_for_sale":"Cars for sale",
-  "interior_navbar":"Interior",
+  "leather_navbar":"Leather",
   "chrome_parts":"Chrome parts",
   "body_restoration":"Body restoration",
   "contact":"Contact",
