--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,11 +1,10 @@
 {
-  "welcome": "Welcome to atelier ds",
   "title": "English title",
   "AtelierDS": "AtelierDS",
-  "welcome_text": "Welcome to AtelierDS. We are Citroen DS enthusiasts who will make your DS look like it just came out of factory. Along with the detailing and restoration, we offer already finished Citroen DS cars for sale.",
+  "welcome_text": "Welcome to AtelierDS! We are Citroen DS enthusiasts who will make your DS look like it just came out of factory. Along with the detailing and restoration, we offer already finished Citroen DS cars for sale.",
   "check_our_cars": "Check our cars",
-  "interior": "Interior",
-  "interior_text": "We offer complete interior restoration with the top quality.",
+  "leather": "Leather",
+  "leather_text": "We offer complete interior restoration with the top quality.",
   "chrome_parts": "Chrome parts",
   "chrome_parts_text": "If your chrome does not look nice and shiny as it used to be... well, we will bring it to its original shiny condition!",
   "body_restauration": "Body restoration",
