--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -12,8 +12,9 @@
   "email_alert_error": "Quelque chose s'est mal passé. Veuillez réessayer.",
   "email_form_title": "Contactez-nous pour plus d'informations",
   "message_type":"Tapez un message...",
+  "homepage":"Home",
   "cars_for_sale":"Voitures à vendre",
-  "interior_navbar":"Intérieur",
+  "leather_navbar":"Cuir",
   "chrome_parts":"Pièces chromées",
   "body_restoration":"Restauration de carrosserie",
   "contact":"Contact",
