--- a/locales/fr/index.json
+++ b/locales/fr/index.json
@@ -1,15 +1,14 @@
 {
-  "welcome": "bienvenue à l'atelier ds",
   "title": "French title",
-  "welcome_text": "Bienvenue sur AtelierDS. Nous sommes des passionnés de Citroën DS qui donnent à votre DS l'impression qu'elle vient de sortir de l'usine. En plus de l'esthétique et de la restauration, nous proposons à la vente des véhicules Citroën DS prêts à l'emploi.",
-  "interior_text": "Nous offrons une restauration intérieure complète avec la meilleure qualité.",
+  "welcome_text": "Bienvenue sur AtelierDS! Nous sommes des passionnés de Citroën DS qui donnent à votre DS l'impression qu'elle vient de sortir de l'usine. En plus de l'esthétique et de la restauration, nous proposons à la vente des véhicules Citroën DS prêts à l'emploi.",
+  "leather_text": "Nous offrons une restauration intérieure complète avec la meilleure qualité.",
   "check_our_cars": "Consultez nos voitures",
   "body_restauration": "Restauration de carrosserie",
   "body_restauration_text": "Pour couronner le tout, nous assurons la restauration complète de la carrosserie en Croatie.",
   "AtelierDS": "AtelierDS",
   "chrome_parts": "Pièces chromées",
   "chrome_parts_text": "Si votre chrome n'est plus aussi beau et brillant qu'avant... eh bien, nous le remettrons dans son état brillant d'origine !",
-  "interior": "Intérieur",
+  "leather": "Cuir",
   "see_more": "Voir plus",
   "quality_service": "Un service de qualité à tous les niveaux",
   "quality_service_text": "Atelierds fournit un service de qualité sur tous les aspects de la restauration automobile. Avec nos partenaires en Croatie pour la restauration de carrosserie, nous vous proposons la restauration complète de Citroen DS.",
