--- a/locales/it/common.json
+++ b/locales/it/common.json
@@ -12,8 +12,9 @@
   "email_alert_error": "Qualcosa è andato storto. Per favore riprova.",
   "email_form_title": "Contattaci per ulteriori informazioni",
   "message_type":"Scrivi un messaggio...",
+  "homepage":"Home",
   "cars_for_sale":"Macchine in vendita",
-  "interior_navbar":"Interno",
+  "leather_navbar":"Pelle",
   "chrome_parts":"Parti cromate",
   "body_restoration":"Restauro del corpo",
   "contact":"Contatto",
