--- a/locales/it/index.json
+++ b/locales/it/index.json
@@ -1,15 +1,14 @@
 {
-  "welcome": "benvenuto nell'atelier ds",
   "title": "Italian title",
-  "welcome_text": "Benvenuto in AtelierDS. Siamo appassionati di Citroen DS che fanno sembrare la tua DS appena uscita dalla fabbrica. Oltre ai dettagli e al restauro, offriamo in vendita veicoli Citroen DS già pronti.",
+  "welcome_text": "Benvenuto in AtelierDS! Siamo appassionati di Citroen DS che fanno sembrare la tua DS appena uscita dalla fabbrica. Oltre ai dettagli e al restauro, offriamo in vendita veicoli Citroen DS già pronti.",
   "check_our_cars": "Controlla le nostre auto",
-  "interior_text": "Offriamo restauro interno completo con la massima qualità.",
+  "leather_text": "Offriamo restauro interno completo con la massima qualità.",
   "body_restauration": "Restauro del corpo",
   "body_restauration_text": "Per concludere, forniamo un restauro completo del corpo in Croazia.",
   "AtelierDS": "AtelierDS",
   "chrome_parts": "Parti cromate",
   "chrome_parts_text": "Se la tua cromatura non è bella e lucida come una volta... beh, la riporteremo alla sua condizione originale e brillante!",
-  "interior": "Interno",
+  "leather": "Pelle",
   "see_more": "Vedi altro",
   "quality_service": "Servizio di qualità a tutto tondo",
   "quality_service_text": "Ateliards fornisce un servizio di qualità su tutti gli aspetti del restauro dell'auto. Con i nostri partner in Croazia per il restauro della carrozzeria, offriamo il restauro completo di Citroen DS.",
