leather page edited

--- a/locales/en/leatherPage.json
+++ b/locales/en/leatherPage.json
@@ -1,7 +1,7 @@
 {
 "leather":"Leather",
 "cuir_naturelle":"Cuir naturelle",
-"cuir_naturelle_year":"7964-1971",
+"cuir_naturelle_year":"1964-1971",
 "cuir_naturelle_text":"Cuir naturelle was specially developed for the 1964 DS19 Pallas interior. Just like back then, we have reproduced exactly this leather quality.",
 "read_more":"Read more",
 "cuir_noire":"Cuir noire",
@@ -10,6 +10,6 @@
 "cuir_tabac":"Cuir tabac (MARRON FONCÉ)",
 "cuir_tabac_year":"1970-1975",
 "cuir_tabac_text":"Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.",
-"naturelle_foncée":"Naturelle foncée",
-"naturelle_foncée_text":"Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order."
+"naturelle_foncee":"Naturelle foncée",
+"naturelle_foncee_text":"Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order."
 }
