--- a/locales/de/leatherPage.json
+++ b/locales/de/leatherPage.json
@@ -1,15 +1,15 @@
 {
     "leather":"Leder",
     "cuir_naturelle":"Cuir naturelle",
-    "cuir_naturelle_year":"7964-1971",
-    "cuir_naturelle_text":"Cuir naturelle wurde speziell für den Innenraum des DS19 Pallas von 1964 entwickelt. Genau wie damals haben wir genau diese Lederqualität reproduziert.",
+    "cuir_naturelle_year":"1964-1971",
+    "cuir_naturelle_text":"War die erstmögliche Lederfarbe bei Citroen und wurde speziell für die 1964 entstandene gediegene Pallasausstattung der DS 19 entwickelt.",
     "read_more":"Weiterlesen",
     "cuir_noire":"Cuir noire",
     "cuir_noire_year":"1965-1984",
-    "cuir_noire_text":"Hier sind die bisher größten Akquisitionen von Unternehmenstechnologie im Jahr 2021 in umgekehrter chronologischer Reihenfolge.",
+    "cuir_noire_text":"Schwarz ist nicht schwarz. Selbst dieser Farbton musste schlussendlich reproduziert werden da sich auf den Markt nur ähnliche aber nicht gleiche Produkte finden ließen, gleiches Leder für den Citroen SM und den Citroen CX.",
     "cuir_tabac":"Cuir tabac (MARRON FONCÉ)",
     "cuir_tabac_year":"1970-1975",
-    "cuir_tabac_text":"Hier sind die bisher größten Akquisitionen von Unternehmenstechnologie im Jahr 2021 in umgekehrter chronologischer Reihenfolge.",
-    "naturelle_foncée":"Naturelle foncée",
-    "naturelle_foncée_text":"Hier sind die bisher größten Akquisitionen von Unternehmenstechnologie im Jahr 2021 in umgekehrter chronologischer Reihenfolge."
+    "cuir_tabac_text":"Wurde im SM seot seiner Entstehung 1970 und bereits im DS 21 ab 1971 eingebaut allerdings mit den Eigenschaften der alten Garnituren (bezüglich des Nahtabstandes und der Breite der Sitzpfeifen).",
+    "naturelle_foncee":"Naturelle foncée",
+    "naturelle_foncee_text":"Hier sind die bisher größten Akquisitionen von Unternehmenstechnologie im Jahr 2021 in umgekehrter chronologischer Reihenfolge."
     }
