--- a/locales/fr/leatherPage.json
+++ b/locales/fr/leatherPage.json
@@ -1,7 +1,7 @@
 {
     "leather":"Cuir",
     "cuir_naturelle":"Cuir naturelle",
-    "cuir_naturelle_year":"7964-1971",
+    "cuir_naturelle_year":"1964-1971",
     "cuir_naturelle_text":"Cuir naturelle a été spécialement développé pour l'intérieur de la DS19 Pallas de 1964. Comme à l'époque, nous avons reproduit exactement cette qualité de cuir.",
     "read_more":"Lire la suite",
     "cuir_noire":"Cuir noire",
@@ -10,6 +10,6 @@
     "cuir_tabac":"Cuir tabac (MARRON FONCÉ)",
     "cuir_tabac_year":"1970-1975",
     "cuir_tabac_text":"Voici les plus grandes acquisitions de technologies d'entreprise de 2021 à ce jour, dans l'ordre chronologique inverse.",
-    "naturelle_foncée":"Naturelle foncée",
-    "naturelle_foncée_text":"Voici les plus grandes acquisitions de technologies d'entreprise de 2021 à ce jour, dans l'ordre chronologique inverse."
+    "naturelle_foncee":"Naturelle foncée",
+    "naturelle_foncee_text":"Voici les plus grandes acquisitions de technologies d'entreprise de 2021 à ce jour, dans l'ordre chronologique inverse."
     }
