--- a/locales/it/leatherPage.json
+++ b/locales/it/leatherPage.json
@@ -1,7 +1,7 @@
 {
     "leather":"Pelle",
     "cuir_naturelle":"Cuir naturelle",
-    "cuir_naturelle_year":"7964-1971",
+    "cuir_naturelle_year":"1964-1971",
     "cuir_naturelle_text":"Cuir naturelle è stato sviluppato appositamente per gli interni del 1964 DS19 Pallas. Proprio come allora, abbiamo riprodotto esattamente questa qualità di pelle.",
     "read_more":"Leggi di più",
     "cuir_noire":"Cuir noire",
@@ -10,6 +10,7 @@
     "cuir_tabac":"Cuir tabac (MARRON FONCÉ)",
     "cuir_tabac_year":"1970-1975",
     "cuir_tabac_text":"Ecco le maggiori acquisizioni di tecnologia aziendale del 2021 finora, in ordine cronologico inverso.",
-    "naturelle_foncée":"Naturelle foncée",
-    "naturelle_foncée_text":"Ecco le maggiori acquisizioni di tecnologia aziendale del 2021 finora, in ordine cronologico inverso."
+    "naturelle_foncee_year":"",
+    "naturelle_foncee":"Naturelle foncée",
+    "naturelle_foncee_text":"Ecco le maggiori acquisizioni di tecnologia aziendale del 2021 finora, in ordine cronologico inverso."
     }
