prestige beige leather added

--- a/locales/de/leatherPage.json
+++ b/locales/de/leatherPage.json
@@ -11,5 +11,9 @@
     "cuir_tabac_year":"1970-1975",
     "cuir_tabac_text":"Wurde im SM seot seiner Entstehung 1970 und bereits im DS 21 ab 1971 eingebaut allerdings mit den Eigenschaften der alten Garnituren (bezüglich des Nahtabstandes und der Breite der Sitzpfeifen).",
     "naturelle_foncee":"Naturelle foncée",
-    "naturelle_foncee_text":"Hier sind die bisher größten Akquisitionen von Unternehmenstechnologie im Jahr 2021 in umgekehrter chronologischer Reihenfolge."
+    "naturelle_foncee_year":"",
+    "naturelle_foncee_text":"Hier sind die bisher größten Akquisitionen von Unternehmenstechnologie im Jahr 2021 in umgekehrter chronologischer Reihenfolge.",
+    "prestige_beige":"",
+    "prestige_beige_year":"",
+    "prestige_beige_text":""
     }
