--- a/locales/en/leatherPage.json
+++ b/locales/en/leatherPage.json
@@ -11,5 +11,9 @@
 "cuir_tabac_year":"1970-1975",
 "cuir_tabac_text":"Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.",
 "naturelle_foncee":"Naturelle foncée",
-"naturelle_foncee_text":"Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order."
+"naturelle_foncee_year":"",
+"naturelle_foncee_text":"Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.",
+"prestige_beige":"",
+"prestige_beige_year":"",
+"prestige_beige_text":""
 }
