--- a/locales/fr/leatherPage.json
+++ b/locales/fr/leatherPage.json
@@ -11,5 +11,9 @@
     "cuir_tabac_year":"1970-1975",
     "cuir_tabac_text":"Voici les plus grandes acquisitions de technologies d'entreprise de 2021 à ce jour, dans l'ordre chronologique inverse.",
     "naturelle_foncee":"Naturelle foncée",
-    "naturelle_foncee_text":"Voici les plus grandes acquisitions de technologies d'entreprise de 2021 à ce jour, dans l'ordre chronologique inverse."
-    }
+    "naturelle_foncee_year":"",
+    "naturelle_foncee_text":"Voici les plus grandes acquisitions de technologies d'entreprise de 2021 à ce jour, dans l'ordre chronologique inverse.",
+    "prestige_beige":"",
+    "prestige_beige_year":"",
+    "prestige_beige_text":""
+}
