--- a/locales/it/leatherPage.json
+++ b/locales/it/leatherPage.json
@@ -12,5 +12,8 @@
     "cuir_tabac_text":"Ecco le maggiori acquisizioni di tecnologia aziendale del 2021 finora, in ordine cronologico inverso.",
     "naturelle_foncee_year":"",
     "naturelle_foncee":"Naturelle foncée",
-    "naturelle_foncee_text":"Ecco le maggiori acquisizioni di tecnologia aziendale del 2021 finora, in ordine cronologico inverso."
-    }
+    "naturelle_foncee_text":"Ecco le maggiori acquisizioni di tecnologia aziendale del 2021 finora, in ordine cronologico inverso.",
+    "prestige_beige":"",
+    "prestige_beige_year":"",
+    "prestige_beige_text":""
+}
