chrome page design streamline

--- a/locales/de/carsPage.json
+++ b/locales/de/carsPage.json
@@ -1,6 +1,6 @@
 {
   "cars_for_sale": "Autos zu verkaufen",
-  "title_message": "Hier können Sie sehen, welche Autos wir im Moment zum Verkauf haben.",
+  "title_message": "Sorgfältig restaurierte Karosserie, perfekte Lackierung und hochwertige Lederarbeiten. Wir bieten die einzigartigsten und am besten restaurierten klassischen Citroen-Autos auf dem Markt an.",
   "read_more":"Weiterlesen",
   "year":"Jahr",
   "car_gallery":"Auto Galerie",
