--- a/locales/en/carsPage.json
+++ b/locales/en/carsPage.json
@@ -1,6 +1,6 @@
 {
   "cars_for_sale": "Cars for sale",
-  "title_message": "Here you can see which cars do we have for sale at the moment.",
+  "title_message": "Carefully restored body, perfect paint job and top-notch quality leather work. We are offering the most unique and best restored classic Citroen cars on the market. ",
   "read_more":"Read more",
   "year":"Year",
   "car_gallery":"Car gallery",
