--- a/locales/fr/carsPage.json
+++ b/locales/fr/carsPage.json
@@ -1,6 +1,6 @@
 {
   "cars_for_sale": "Voitures à vendre",
-  "title_message": "Ici vous pouvez voir quelles voitures nous avons à vendre en ce moment.",
+  "title_message": "Carrosserie restaurée avec soin, peinture parfaite et travail du cuir de qualité supérieure. Nous proposons les voitures Citroën classiques les plus uniques et les mieux restaurées du marché.",
   "read_more":"Lire la suite",
   "year":"Année",
   "car_gallery":"Galerie de voitures",
