--- a/locales/it/carsPage.json
+++ b/locales/it/carsPage.json
@@ -1,6 +1,6 @@
 {
   "cars_for_sale": "Macchine in vendita",
-  "title_message": "Qui puoi vedere quali auto abbiamo in vendita al momento.",
+  "title_message": "Carrozzeria accuratamente restaurata, verniciatura perfetta e pelle di prima qualità. Stiamo offrendo le auto Citroen classiche più uniche e meglio restaurate sul mercato.",
   "read_more":"Leggi di più",
   "year":"Anno",
   "car_gallery":"Galleria auto",
