add text to contact page

--- a/locales/en/contact.json
+++ b/locales/en/contact.json
@@ -1,3 +1,3 @@
 {
-    "contact_text":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+    "contact_text":"We are Citroen enthusiasts who love what they are doing - giving new life classic Citroen cars (SM, DS, CX, XM). With our partners from Croatia and Austria we are being able to offer full service in Citroen classic cars restoration. Our headquarters is in Bolzano, Italy."
 }
