--- a/locales/de/contact.json
+++ b/locales/de/contact.json
@@ -1,3 +1,3 @@
 {
-    "contact_text":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+    "contact_text":"Wir sind Citroen-Enthusiasten, die lieben, was sie tun – klassischen Citroen-Autos (SM, DS, CX, XM) neues Leben einzuhauchen. Mit unseren Partnern aus Kroatien und Österreich sind wir in der Lage, Full-Service in der Restaurierung von Citroen Oldtimern anzubieten. Unser Hauptsitz befindet sich in Bozen, Italien."
 }
