--- a/locales/fr/contact.json
+++ b/locales/fr/contact.json
@@ -1,3 +1,3 @@
 {
-    "contact_text":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+    "contact_text":"Nous sommes des passionnés de Citroën qui aiment ce qu'ils font - donner une nouvelle vie aux voitures Citroën classiques (SM, DS, CX, XM). Avec nos partenaires de Croatie et d'Autriche, nous sommes en mesure d'offrir un service complet de restauration de voitures anciennes Citroën. Notre siège social est à Bolzano, en Italie."
 }
