--- a/locales/it/contact.json
+++ b/locales/it/contact.json
@@ -1,3 +1,3 @@
 {
-    "contact_text":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+    "contact_text":"Siamo appassionati di Citroen che amano quello che stanno facendo: dare nuova vita alle classiche auto Citroen (SM, DS, CX, XM). Con i nostri partner dalla Croazia e dall'Austria siamo in grado di offrire un servizio completo di restauro di auto d'epoca Citroen. La nostra sede è a Bolzano, Italia."
 }
