lorem ipsum replaced

--- a/locales/de/index.json
+++ b/locales/de/index.json
@@ -12,10 +12,10 @@
   "quality_service": "Qualitätsservice rundum",
   "quality_service_text": "Atelierds bietet qualitativ hochwertigen Service in allen Aspekten der Autorestaurierung. Mit unseren Partnern in Kroatien für die Karosserierestaurierung bieten wir die komplette Restaurierung des Citroen DS an.",
   "working_with_us": "Mit uns zu arbeiten macht Freude",
-  "working_with_us_text1": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
-  "working_with_us_text2": "Sie hat nicht nur fünf Jahrhunderte, sondern auch den Sprung in den elektronischen Satz überstanden und ist im Wesentlichen unverändert geblieben.",
+  "working_with_us_text1": "Wir werden unser Bestes tun, um alle Ihre Fragen und Wünsche so schnell wie möglich zu beantworten. Sobald wir Ihr Produkt erhalten haben, beginnen wir sofort mit der Bearbeitung und bleiben mit Ihnen in Kontakt. Sobald die Arbeit erledigt ist, können Sie eine Bestätigung erwarten, gefolgt vom Versand des Produkts.",
+  "working_with_us_text2": "Egal, ob Sie ein bestimmtes Teil, ein ganzes Auto oder nur den Innenraum restaurieren möchten, wir sind für Sie da.",
   "a_growing_company": "Ein wachsendes Unternehmen",
-  "a_growing_company_text": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "a_growing_company_text": "Wir wachsen und verbessern uns ständig. Zuerst haben wir klein angefangen, aber im Laufe der Zeit haben wir uns über unseren Hauptsitz hinaus erweitert, sodass wir jetzt mit unseren Partnern in Kroatien und Österreich zusammenarbeiten. Und wir haben nicht vor, das Wachstum zu stoppen.",
   "crafted_with_love": "Mit Liebe gefertigt, weil wir Citroen DS lieben",
   "perfect_blend": "Eine perfekte Mischung aus Kreativität und Qualität",
   "personal_touch": "Persönliche Note für alle unsere Arbeiten",
