--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -11,12 +11,12 @@
   "body_restauration_text": "To wrap it all up, we provide complete body restoration in Croatia.",
   "see_more": "See more",
   "working_with_us": "Working with us is a pleasure",
-  "working_with_us_text1": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
-  "working_with_us_text2": "It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.",
+  "working_with_us_text1": "We will do our best to address all your questions and requests as soon as possible. Once we receive your product, we will start working on it immediately and keep in touch with you . Once the work is done, you can expect confirmation followed with shipping of the product. ",
+  "working_with_us_text2": "Regardless whether you want to restore specific part, whole car or just interior, we are here for you.",
   "quality_service": "Quality service all-round",
   "quality_service_text": "Atelierds provides quality service on all aspects of car restoration. With our partners in Croatia for bodywork restoration, we offer complete restoration of Citroen DS.",
   "a_growing_company": "A growing company",
-  "a_growing_company_text": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "a_growing_company_text": "We are constantly growing and improving. At first, we started small, but as time passed by, we expanded beyond just our headquarters so now we are cooperating with our partners in Croatia and Austria. And we don’t plan to stop the growth.",
   "personal_touch": "Personal touch for all of our work",
   "perfect_blend": "A perfect blend of creativity and quality",
   "crafted_with_love": "Crafted with love, because we love Citroen DS",
