--- a/locales/fr/index.json
+++ b/locales/fr/index.json
@@ -13,10 +13,10 @@
   "quality_service": "Un service de qualité à tous les niveaux",
   "quality_service_text": "Atelierds fournit un service de qualité sur tous les aspects de la restauration automobile. Avec nos partenaires en Croatie pour la restauration de carrosserie, nous vous proposons la restauration complète de Citroen DS.",
   "working_with_us": "Travailler avec nous est un plaisir",
-  "working_with_us_text1": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
-  "working_with_us_text2": "Il a survécu non seulement à cinq siècles, mais aussi au saut dans la composition électronique, restant essentiellement inchangé.",
+  "working_with_us_text1": "Nous ferons de notre mieux pour répondre à toutes vos questions et demandes dans les plus brefs délais. Une fois que nous aurons reçu votre produit, nous commencerons à travailler dessus immédiatement et resterons en contact avec vous. Une fois le travail terminé, vous pouvez vous attendre à une confirmation suivie de l'expédition du produit.",
+  "working_with_us_text2": "Que vous souhaitiez restaurer une pièce spécifique, une voiture entière ou simplement l'intérieur, nous sommes là pour vous.",
   "a_growing_company": "Une entreprise en pleine croissance",
-  "a_growing_company_text": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "a_growing_company_text": "Nous grandissons et nous améliorons constamment. Au début, nous avons commencé petit, mais au fil du temps, nous nous sommes étendus au-delà de notre siège social, nous coopérons donc maintenant avec nos partenaires en Croatie et en Autriche. Et nous ne prévoyons pas d'arrêter la croissance.",
   "crafted_with_love": "Fabriqué avec amour, parce que nous aimons Citroën DS",
   "perfect_blend": "Un mélange parfait de créativité et de qualité",
   "personal_touch": "Une touche personnelle pour tous nos travaux",
