--- a/locales/it/index.json
+++ b/locales/it/index.json
@@ -13,10 +13,10 @@
   "quality_service": "Servizio di qualità a tutto tondo",
   "quality_service_text": "Ateliards fornisce un servizio di qualità su tutti gli aspetti del restauro dell'auto. Con i nostri partner in Croazia per il restauro della carrozzeria, offriamo il restauro completo di Citroen DS.",
   "working_with_us": "Lavorare con noi è un piacere",
-  "working_with_us_text1": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
-  "working_with_us_text2": "È sopravvissuto non solo a cinque secoli, ma anche al salto nella composizione elettronica, rimanendo sostanzialmente invariato.",
+  "working_with_us_text1": "Faremo del nostro meglio per rispondere a tutte le tue domande e richieste il prima possibile. Una volta ricevuto il tuo prodotto, inizieremo immediatamente a lavorarci e resteremo in contatto con te. Una volta terminato il lavoro, puoi aspettarti la conferma seguita dalla spedizione del prodotto.",
+  "working_with_us_text2": "Indipendentemente dal fatto che tu voglia restaurare una parte specifica, l'intera auto o solo l'interno, siamo qui per te.",
   "a_growing_company": "Un'azienda in crescita",
-  "a_growing_company_text": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "a_growing_company_text": "Siamo in costante crescita e miglioramento. All'inizio abbiamo iniziato in piccolo, ma con il passare del tempo ci siamo espansi oltre la nostra sede centrale, quindi ora stiamo collaborando con i nostri partner in Croazia e Austria. E non abbiamo intenzione di fermare la crescita.",
   "crafted_with_love": "Realizzato con amore, perché amiamo Citroen DS",
   "perfect_blend": "Un perfetto connubio tra creatività e qualità",
   "personal_touch": "Tocco personale per tutto il nostro lavoro",
