add missing name

--- a/locales/de/index.json
+++ b/locales/de/index.json
@@ -25,7 +25,7 @@
   "christian_text": "Transport und Logistik",
   "enzo": "Enzo Forgione",
   "enzo_text": "CEO",
-  "luki": "Luki",
+  "luki": "Lukas Profunser",
   "luki_text": "Chrom & Interieur",
   "people_working_on_a_project": "Menschen, die an einem Projekt arbeiten",
   "people_working_on_a_project_text": "Es ist unmöglich, ein rentables Geschäft ohne qualifizierte Mitarbeiter aufrechtzuerhalten. Jeder unserer Bereiche hat einen Verantwortlichen.",
