--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -24,7 +24,7 @@
   "people_working_on_a_project_text": "It is impossible to maintain viable business without quality people. Each of our divisions have a person in charge.",
   "enzo": "Enzo Forgione",
   "enzo_text": "CEO",
-  "luki": "Luki",
+  "luki": "Lukas Profunser",
   "luki_text": "Chrome & interior",
   "christian": "Christian Sturm",
   "christian_text": "Transportation and logistics",
