--- a/locales/fr/index.json
+++ b/locales/fr/index.json
@@ -26,7 +26,7 @@
   "christian_text": "Transport et logistique",
   "enzo": "Enzo Forgione",
   "enzo_text": "CEO",
-  "luki": "Luki",
+  "luki": "Lukas Profunser",
   "luki_text": "Chrome et intérieur",
   "people_working_on_a_project": "Personnes travaillant sur un projet",
   "people_working_on_a_project_text": "Il est impossible de maintenir une entreprise viable sans des personnes de qualité. Chacune de nos divisions a un responsable.",
