--- a/locales/it/index.json
+++ b/locales/it/index.json
@@ -26,7 +26,7 @@
   "christian_text": "Trasporti e logistica",
   "enzo": "Enzo Forgione",
   "enzo_text": "CEO",
-  "luki": "Luki",
+  "luki": "Lukas Profunser",
   "luki_text": "Cromo e interni",
   "people_working_on_a_project": "Persone che lavorano su un progetto",
   "people_working_on_a_project_text": "È impossibile mantenere un'attività redditizia senza persone di qualità. Ciascuna delle nostre divisioni ha un responsabile.",
